Gradle: Try to fix unit test failure on Java >= 16
Would fail on Travis CI with:
plugins.Freetalk.WoT.WoTMessageManagerTest > testOnMessageListFetchFailed FAILED
    java.lang.reflect.InaccessibleObjectException: Unable to make field private final java.lang.String java.lang.Enum.name accessible: module java.base does not "opens java.lang" to unnamed module @5d20b857
        at java.base/java.lang.reflect.AccessibleObject.checkCanSetAccessible(AccessibleObject.java:357)
        at java.base/java.lang.reflect.AccessibleObject.checkCanSetAccessible(AccessibleObject.java:297)
        at java.base/java.lang.reflect.Field.checkCanSetAccessible(Field.java:177)
        at java.base/java.lang.reflect.Field.setAccessible(Field.java:171)
        at com.db4o.internal.JDK_1_2.setAccessible(JDK_1_2.java:150)

Fix attempt taken from:
https://stackoverflow.com/a/41265267