@@ -101,6 +101,12 @@ test {
 	
 	// TODO: Enable once my distribution ships a more recent Gradle which supports this.
 	// failFast = true
+	
+	// FIXME: Workaround attempt for db4o breaking, and thus unit tests failing, with Java >= 16.
+	// If this works then properly document it, if not remove it.
+	// Also figure out a way for how to apply it when running Freetalk in an actual Freenet node.
+	jvmArgs '--add-opens java.base/java.lang=ALL-UNNAMED'
+	
 	maxHeapSize = "512m"
 	maxParallelForks = Runtime.runtime.availableProcessors()
 	forkEvery = 1 // One VM per test, for safety and probably needed for maxParallelForks to work
